--- a/calibration.toml
+++ b/calibration.toml
@@ -3,10 +3,10 @@
 # Entry for every motor
 [mot0]
 # Absolute minimum and maximum in mm
-min = 40
-max = 60
+limit_outside = 40
+limit_inside = 60
 # calibration points, use either floats or ints
-cal = [[60, 1680], [46.5, 2058.0]]
+cal_points = [[60, 1680], [46.5, 2058.0]]
 
 [mot1]
 # Absolute minimum and maximum in mm
