--- a/calibration.toml
+++ b/calibration.toml
@@ -1,12 +1,19 @@
 # Config and calibration file for motors
 
+# Please note that in the current hardware configuration:
+# As motors move inside:
+# -- values in mm increase
+# -- ADC values decrease
+# -- Motor rotation direction is CCW
+
+
 # Value entry for every motor
 [mot0]
 # Absolute minimum and maximum in mm
 limit_outside = 40
 limit_inside = 60
 # calibration points, use either floats or ints
-cal_points = [[60, 1680], [46.5, 2058.0]]
+cal_points = [[49, 1864], [83, 1072]]
 
 # Value entry for every motor
 [mot1]
@@ -14,7 +21,7 @@ cal_points = [[60, 1680], [46.5, 2058.0]]
 limit_outside = 40
 limit_inside = 60
 # calibration points, use either floats or ints
-cal_points = [[60, 1680], [46.5, 2058.0]]
+cal_points = [[37, 4677], [65.5, 3093.0]]
 
 # Value entry for every motor
 [mot2]
@@ -22,7 +29,7 @@ cal_points = [[60, 1680], [46.5, 2058.0]]
 limit_outside = 40
 limit_inside = 60
 # calibration points, use either floats or ints
-cal_points = [[60, 1680], [46.5, 2058.0]]
+cal_points = [[63, 1680], [46.5, 2058.0]]
 
 # Value entry for every motor
 [mot3]
